--- a/css/skeleton.scss
+++ b/css/skeleton.scss
@@ -6,8 +6,6 @@
 * http://www.opensource.org/licenses/mit-license.php
 * 12/29/2014
 */
-
-
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
 - Grid
@@ -24,7 +22,9 @@
 - Clearing
 - Media Queries
 */
-
+@use "circuits/circuits";
+$primary-color: #1EAEDB;
+$primary-color-dimmed: #538493;
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -128,7 +128,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444; }
+  color: $primary-color }
 
 
 /* Typography
@@ -161,7 +161,7 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: $primary-color }
 a:hover {
   color: #0FA0CE; }
 
@@ -174,9 +174,10 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
+  position: relative;
   height: 38px;
   padding: 0 30px;
-  color: #888;
+  color: $primary-color;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -187,9 +188,32 @@ input[type="button"] {
   white-space: nowrap;
   background-color: transparent;
   border-radius: 2px;
-  border: 1px solid #bbb;
+  border: 1px solid $primary-color;
   cursor: pointer;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  &::before {
+    transition: 0.7s;
+    border-radius: 10px;
+    content: '';
+    height: 100%;
+    width: 1px;
+    position: absolute;
+    background-color: $primary-color;
+    left: -8px;
+    top: 0px;
+  }
+  &::after {
+    transition: 0.7s;
+    border-radius: 10px;
+    content: '';
+    width: 50%;
+    height: 1px;
+    position: absolute;
+    background-color: $primary-color;
+    right: 0px;
+    top: -8px;
+  }
+}
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
@@ -201,17 +225,31 @@ input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
   color: #000;
-  border-color: #aaa;
-  background-color: #aaa;
-  outline: 0; }
+  border-color: $primary-color;
+  background-color: $primary-color;
+  outline: 0;
+
+  &::before {
+    height: 60%;
+    width: 1px;
+    left: -8px;
+    top: 0px;
+  }
+  &::after {
+    width: 30%;
+    height: 1px;
+    right: 0px;
+    top: -8px;
+  }
+}
 .button.button-primary,
 button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; }
+  background-color: $primary-color;
+  border-color: $primary-color; }
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -223,8 +261,8 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB; }
+  background-color: $primary-color;
+  border-color: $primary-color; }
 
 
 /* Forms
@@ -240,11 +278,16 @@ textarea,
 select {
   height: 38px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #fff;
-  border: 1px solid #D1D1D1;
+  background-color: transparent;
+  color: $primary-color;
+  border: 1px solid $primary-color;
   border-radius: 2px;
   box-shadow: none;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  &::placeholder {
+    color: $primary-color-dimmed;
+  }
+}
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
@@ -270,7 +313,7 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid #33C3F0;
+  border: 1px solid $primary-color;
   outline: 0; }
 label,
 legend {
@@ -315,8 +358,8 @@ code {
   margin: 0 .2rem;
   font-size: 90%;
   white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
+  background: $primary-color;
+  border: 1px solid $primary-color;
   border-radius: 2px; }
 pre > code {
   display: block;
@@ -330,7 +373,7 @@ th,
 td {
   padding: 12px 15px;
   text-align: left;
-  border-bottom: 1px solid #E1E1E1; }
+  border-bottom: 1px solid $primary-color; }
 th:first-child,
 td:first-child {
   padding-left: 0; }
@@ -381,7 +424,7 @@ hr {
   margin-top: 3rem;
   margin-bottom: 3.5rem;
   border-width: 0;
-  border-top: 1px solid #E1E1E1; }
+  border-top: 1px solid $primary-color; }
 
 
 /* Clearing
