--- a/css/skeleton.scss
+++ b/css/skeleton.scss
@@ -23,6 +23,7 @@
 - Media Queries
 */
 @use "circuits/circuits";
+@use "modals/modal-cards";
 $primary-color: #1EAEDB;
 $primary-color-dimmed: #538493;
 
