--- a/css/modals/_modal-cards.scss
+++ b/css/modals/_modal-cards.scss
@@ -15,13 +15,16 @@ $primary-color-dimmed: #538493;
     display: none;
   }
   .modal {
-    position: absolute;
     z-index: 2;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #111;
+    color: $primary-color;
+    border: 1px solid $primary-color;
     &-card {
       margin: auto;
       width: 200px;
-      height: 200px;
-      background-color: $primary-color-dimmed;
+      max-height: 80vh;
     }
   }
 }
