--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -199,14 +199,17 @@ button:hover .cb-3::after {
   display: none;
 }
 .modal-container .modal {
-  position: absolute;
   z-index: 2;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #111;
+  color: #1EAEDB;
+  border: 1px solid #1EAEDB;
 }
 .modal-container .modal-card {
   margin: auto;
   width: 200px;
-  height: 200px;
-  background-color: #538493;
+  max-height: 80vh;
 }
 
 /*
