--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -199,7 +199,7 @@ button:hover .cb-3::after {
   display: none;
 }
 .modal-container .modal {
-  z-index: 2;
+  z-index: 3;
   border-radius: 10px;
   padding: 10px;
   background-color: #111;
@@ -210,6 +210,9 @@ button:hover .cb-3::after {
   margin: auto;
   width: 200px;
   max-height: 80vh;
+}
+.modal-container .modal-card.hide {
+  display: none;
 }
 
 /*
