--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -184,7 +184,7 @@ button:hover .cb-3::after {
   margin-left: 40px;
 }
 
-.modal-container {
+#modal-dismiss {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -192,6 +192,14 @@ button:hover .cb-3::after {
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(1px);
+}
+
+.modal-container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
 }
