--- a/css/modals/_modal-cards.scss
+++ b/css/modals/_modal-cards.scss
@@ -1,7 +1,6 @@
 $primary-color: #1EAEDB;
 $primary-color-dimmed: #538493;
-
-.modal-container {
+#modal-dismiss {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -9,6 +8,13 @@ $primary-color-dimmed: #538493;
   left: 0;
   background-color: rgba(0,0,0,.5);
   backdrop-filter: blur(1px);
+}
+.modal-container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   &.hide {
